--- a/landing.html
+++ b/landing.html
@@ -19,7 +19,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/akeaswaran" class="fa fa-twitter"><span>Twitter</span></a></li>
-								<li><a href="https://github.com/shivadoc" class="fa fa-github"><span>Github</span></a></li>
+								<li><a href="https://github.com/akeaswaran" class="fa fa-github"><span>Github</span></a></li>
 								<li><a href="mailto:akeaswaran@me.com" class="fa fa-envelope-o"><span>Email</span></a></li>
 								<li><a href="index.html" class="fa fa-folder-o"><span>Blog</span></a></li>
 							</ul>
