--- a/php/index.html
+++ b/php/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Home - Akshay Easwaran</title>
         <link rel="stylesheet" href="main.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     </head>
-    <title>Home - Akshay Easwaran</title>
+
     <body>
         <div id="headerTitle">
             <h1>Akshay Easwaran</h1>
         </div>
         <div id="navContainer">
             <a href="index.html" id="homeTab">Home</a>
-            <a href="background.html" id="backgroundTab">Background</a>
+            <a href="background.php" id="backgroundTab">Background</a>
             <a href="projects.html" id="projectsTab">Projects</a>
+            <a href="keynote/index.html" id="keynoteTab">Keynote</a>
         </div>
-        <img id="miltonStands" src="images/milton-stadium.jpg"/>
         <div id="introParagraphContainer">
             <h3>About Me</h3>
             <div id="introText">
@@ -29,7 +30,7 @@
                 <p>Last summer, I interned with CloudSherpas, a Salesforce.com partner in Atlanta, and assisted on a iOS development project that worked with the Salesforce iOS SDK and CoreData. Later this year, I hope to intern at a few more companies to gain more experience in the mobile development field.</p>
 
                 <p>This summer, I interned at Salesforce.com in Atlanta, learning about web development and working on large-scale corporate applications.</p>
-                
+
             </div>
         </div>
     </body>
