updated quotes page

--- a/bipolardisorder/mania.html
+++ b/bipolardisorder/mania.html
@@ -13,12 +13,12 @@
   </head>
 
   <body>
-
     <div class="container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="summary.html">Experts</a></li>
             <li role="presentation" class="active"><a href="mania.html">Mania</a></li>
             <li role="presentation"><a href="depression.html">Depression</a></li>
             <li role="presentation"><a href="treatment.html">Treatment</a></li>
