--- a/bipolardisorder/depression.html
+++ b/bipolardisorder/depression.html
@@ -19,6 +19,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="summary.html">Experts</a></li>
             <li role="presentation"><a href="mania.html">Mania</a></li>
             <li role="presentation" class="active"><a href="depression.html">Depression</a></li>
             <li role="presentation"><a href="treatment.html">Treatment</a></li>
