--- a/bipolardisorder/treatment.html
+++ b/bipolardisorder/treatment.html
@@ -18,6 +18,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="summary.html">Experts</a></li>
             <li role="presentation"><a href="mania.html">Mania</a></li>
             <li role="presentation"><a href="depression.html">Depression</a></li>
             <li role="presentation" class="active"><a href="treatment.html">Treatment</a></li>
@@ -41,15 +42,6 @@
         <p style="color:white;"><b>Psychotherapy</b>: educates patients about the effects of the illness, so they can reognize symptoms before they become serious.</p>
         <p style="color:white;"><b>Electroconvulsive therapy (ECT)</b>: commonly referred to as shock therapy; provides relief for people with severe bipolar disorder who have not been able to recover with other treatments.</p>
 
-        <h3 style="color:white;text-align:center;">K.R. Jamison's Battle with Bipolar Disorder</h3>
-        <i>
-          <p style="text-align:left;">In her bestselling classic, An Unquiet Mind, Kay Redfield Jamison changed the way we think about moods and madness.</p>
-
-          <p style="text-align:left;">Dr. Jamison is one of the foremost authorities on manic-depressive (bipolar) illness; she has also experienced it firsthand. For even while she was pursuing her career in academic medicine, Jamison found herself succumbing to the same exhilarating highs and catastrophic depressions that afflicted many of her patients, as her disorder launched her into ruinous spending sprees, episodes of violence, and an attempted suicide.</p>
-
-          <p style="text-align:left;">Here Jamison examines bipolar illness from the dual perspectives of the healer and the healed, revealing both its terrors and the cruel allure that at times prompted her to resist taking medication. An Unquiet Mind is a memoir of enormous candor, vividness, and wisdom—a deeply powerful book that has both transformed and saved lives.</p>
-        </i>
-        <p style="text-align:right;"> - From <a href="http://www.amazon.com/Unquiet-Mind-Memoir-Moods-Madness/dp/0679763309/ref=sr_1_1?ie=UTF8&qid=1429014223&sr=8-1&keywords=an+unquiet+mind">Amazon.com's summary of An Unquiet Mind</a>
 
       </div>
 
