--- a/countr/index.html
+++ b/countr/index.html
@@ -1,38 +1,47 @@
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Countr - The Countdown App">
-    <meta name="author" content="Akshay Easwaran">
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Countr | The Countdown App</title>
 
-    <title>Countr | Home</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link href="main.css" rel="stylesheet">
-  </head>
+<link href="main.css" rel="stylesheet" />
 
-  <body>
+</head>
 
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-          </ul>
-        </nav>
-        <h3 class="text-muted" style="text-align:center;">Countr</h3>
-      </div>
+<body>
+<div id="container">
+	
+	
+    <section id="feature">
+		
+		<div id="feature-info">
+			
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+			<a href="https://itunes.apple.com/us/app/countr-the-countdown-app/id991230442?ls=1&mt=8" id="app-store"></a>
+            
+		</div>
+	</section>
+    </div>
 
-      <div class="jumbotron">
-        <h1>Countr</h1>
-        <p class="lead">A new way to keep track of events.</p>
-        <p><a class="btn btn-primary btn-lg" href="http://google.com/" role="button">Get it now!</a></p>
-      </div>
+<footer>
+	<ul style="margin: 0 auto; content-align:center;">
+		<li><a href="index.html">Home</a></li>
+        <li><a href="mailto:miltondevcrew@gmail.com">Support</a></li>
+        <li><a href="https://itunes.apple.com/us/app/countr-the-countdown-app/id991230442?ls=1&mt=8">App Store</a></li>
+	</ul>
+    <p id="copyright" style="color:white;">Copyright &copy; 2015 Akshay Easwaran.</p>
+</footer>
 
-      <footer class="footer">
-        <p>© 2015 Akshay Easwaran. Theme and design based on <a href="http://getbootstrap.com/">Bootstrap</a>'s Narrow Jumbotron example.</p>
-      </footer>
 
-    </div> <!-- /container -->
-  </body>
+</body>
 </html>
+
+<style type="text/css">
+
+a:link {color: #EBEBEB; }
+a:active {color: rgb(150, 19, 5);  }
+a:visited {color: #A3A6A6; }
+a:hover {color: #75747E; }
+
+
+</style>
