--- a/projects/index.html
+++ b/projects/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Akshay Easwaran | Home</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <title>Akshay Easwaran | Projects</title>
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&amp;subset=latin,latin-ext" type="text/css" media="all">
-    <link rel="stylesheet" href="assets/themes/aurevoir/style.css" type="text/css">
-    <link rel="stylesheet" href="assets/themes/aurevoir/style-added.css" type="text/css">
+    <link rel="stylesheet" href="../assets/themes/aurevoir/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/themes/aurevoir/style-added.css" type="text/css">
+    <!-- Latest compiled and minified CSS -->
     <!--[if lt IE 9]>
     <link rel='stylesheet' id='twentytwelve-ie-css'  href='assets/themes/twentytwelve/css/ie.css' type='text/css' />
     <![endif]-->
-    <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script><style type="text/css"></style>
+    <script type="text/javascript" src="../assets/js/jquery-1.11.2.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Exo+2:400,800' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="http://akeaswaran.github.io/">
     <link rel="alternate" type="application/rss+xml" title="Blog" href="http://akeaswaran.github.io/feed.xml">
@@ -26,8 +27,8 @@
         <h3 class="menu-toggle">Menu</h3>
         <div class="menu-menu-1-container">
           <ul id="menu-menu-1" class="nav-menu">
-            <li id="menu-item-22" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-22"><a href="http://akeaswaran.github.io">Home</a></li>
-            <!--<li id="menu-item-23" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="projects/index.html">Projects</a></li>-->
+            <li id="menu-item-22" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-22"><a href="../index.html">Home</a></li>
+            <li id="menu-item-23" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="projects/index.html">Projects</a></li>
             <li id="menu-item-24" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25"><a href="https://github.com/akeaswaran">GitHub</a></li>
             <li id="menu-item-25" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25"><a href="https://twitter.com/akeaswaran">Twitter</a></li>
           </ul>
@@ -35,10 +36,23 @@
       </nav>
     </header>
 
-    <div id="main">
-      <img src="assets/images/clemsongtpano.jpg" style="width: 80%;content-align: center; display: block; margin: 0 auto;">
-      <h5 style="font-family: Helvetica Neue, sans-serif;font-size:20px;text-align:center;display:block;margin:0 auto;padding-top: 30px;padding-bottom:5px;"><i><b>Perfection is not attainable, but if we chase perfection we can catch excellence.</b></i></h5>
-      <span style="font-family: Helvetica Neue, sans-serif;font-size:15px;text-align:center;display:block;margin:0 auto;padding: 5px;">Vince Lombardi</span>
+    <div id="main" class="container">
+      <div class="row" style="text-align:center;">
+        <div class="col-md-6" style="border:1px solid gray;padding:10px;">
+          col
+        </div>
+        <div class="col-md-6" style="border:1px solid gray;padding:10px;">
+          col
+        </div>
+      </div>
+      <div class="row" style="text-align:center;">
+        <div class="col-md-6" style="border:1px solid gray;padding:10px;">
+          col
+        </div>
+        <div class="col-md-6" style="border:1px solid gray;padding:10px;">
+          col
+        </div>
+      </div>
   	</div>
 
     <footer class="site-footer" id="colophon" role="contentinfo">
@@ -48,8 +62,8 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="assets/js/scripts.js?ver=4.1.1"></script>
-    <script type="text/javascript" src="assets/themes/twentytwelve/js/navigation.js?ver=20140711"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../assets/js/scripts.js?ver=4.1.1"></script>
+    <script type="text/javascript" src="../assets/themes/twentytwelve/js/navigation.js?ver=20140711"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
