app store description

--- a/countr/index.html
+++ b/countr/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@akeaswaran" />
         <meta name="twitter:title" content="Countr - the Countdown App" />
-        <meta name="twitter:description" content="Introducing a whole new way to look forward to things. Available July 17th." />
+        <meta name="twitter:description" content="Introducing a simpler way to look forward to things. Available July 17th." />
         <meta name="twitter:image" content="images/COUNTRTWAD.png" />
         <title>Countr | The Countdown App</title>
         <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
@@ -23,12 +23,18 @@
                 <div class="col-xs-4 titles">
                     <h1>Countr</h1>
                     <h2>The Countdown App</h2>
+                    <h5>A simpler way to look forward to things.</h5>
                 </div>
                 <div class="row">
                     <div class="col-xs-4 forms">
-                        <form class="form-inline" role="form">
-                          <h3>Sign up to get updates from Countr's developers!</h3>
-                          <p>(Don't worry - we promise not to spam you.)</p>
+                      <div class="row" style="margin-bottom: 35px;">
+                        <p>Today's countdown apps are bloated - crowded with too many unnecessary features and ads. Countr is a simple and intuitive way to keep track of important upcoming events, such as birthdays, graduations, and vacations. Instead of being bloated like our competitors, Countr has all of the most important features necessary for an excellent experience.</p>
+                      </div>
+                      <h3 style="margin-bottom:50px;">Available July 17th.</h3>
+                      <h4>Sign up to get updates from Countr's developers!</h4>
+                      <h6>(Don't worry - we promise not to spam you.)</h6>
+                        <form class="form-inline" role="form" style="margin-top:20px;">
+
                           <div class="form-group">
                             <label for="emailEntry" class="sr-only">Email address</label>
                             <input type="email" class="form-control" id="emailEntry" placeholder="Email" value="">
@@ -45,6 +51,7 @@
                         </div>
                     </div>
                 </div>
+
 			</div>
         </div>
 
