remove stupid apostrophe

--- a/countr/index.html
+++ b/countr/index.html
@@ -12,9 +12,8 @@
         <meta name="twitter:site" content="@akeaswaran">
         <meta name="twitter:title" content="Countr - the Countdown App">
         <meta name="twitter:description" content="Introducing a simpler way to look forward to things. Available July 17th.">
-        <meta name="twitter:image" content="images/COUNTRTWAD.png">'
+        <meta name="twitter:image" content="images/COUNTRTWAD.png">
     </head>
-
     <body>
         <div class="container">
               <div class="row">
