--- a/gtgofundme/index.html
+++ b/gtgofundme/index.html
@@ -54,8 +54,7 @@
                     <span class="icon-bar"></span>
                   </button>
 
-                 <!-- For Img Logo -->
-                  <a class="navbar-brand logo" href="#"><img src="img/logo.png" alt="logo"></a>
+                 <a class="navbar-brand logo" href="#"><span>GT</span>FundMe</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right custom_nav mobnav" id="top-menu">
@@ -69,14 +68,11 @@
           </div>
           <ul id="demo1" class="slides">
             <li>
-              <img src="img/slider/asfalt.png" />
+              <img src="img/techtower.png" />
               <!--Slider Description example-->
               <div class="slide-desc">
-                <div class="slide_descleft">
-                  <img src="img/mobileapp_img.png" alt="img">
-                </div>
                 <div class="slide_descright">
-                  <h1>Build With Bootstrap V3.1.1</h1>
+                  <h1>Support Campus Clean-up Efforts</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
                     <a href="http://sga.gatech.edu/ug/" class="learnmore_btn">Learn More</a>
@@ -86,13 +82,10 @@
               </div>
             </li>
             <li>
-              <img src="img/slider/dark_wall.png" />
+              <img src="img/techsquare.jpg" />
               <div class="slide-desc">
-                <div class="slide_descleft">
-                 <img src="img/mobileapp_img.png" alt="img">
-                </div>
                 <div class="slide_descright">
-                 <h1>Fully Responsive Theme</h1>
+                 <h1>Help the IT committee</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
                     <a href="http://sga.gatech.edu/ug/" class="learnmore_btn">Learn More</a>
@@ -102,13 +95,10 @@
               </div>
             </li>
             <li>
-              <img src="img/slider/stardust.png" />
+              <img src="img/gtatl.jpg" />
               <div class="slide-desc">
-               <div class="slide_descleft">
-                 <img src="img/mobileapp_img.png" alt="img">
-               </div>
                <div class="slide_descright">
-                  <h1>Crystal Clear Coding </h1>
+                  <h1>Help Buzz support events around campus and around the city</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                 <div class="header_btnarea">
                   <a href="http://sga.gatech.edu/ug/" class="learnmore_btn">Learn More</a>
@@ -118,13 +108,10 @@
               </div>
             </li>
             <li>
-              <img src="img/slider/dark_wood.png" />
+              <img src="img/gtcampus.jpg" />
               <div class="slide-desc">
-                <div class="slide_descleft">
-                   <img src="img/mobileapp_img.png" alt="img">
-                </div>
                 <div class="slide_descright">
-                  <h1>Build With Bootstrap V3.1.1</h1>
+                  <h1>Help support SGA events year-round</h1>
                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
                     <a href="http://sga.gatech.edu/ug/" class="learnmore_btn">Learn More</a>
