--- a/gtgofundme/index.html
+++ b/gtgofundme/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GoFundTech | Home</title>
+    <title>GTFundMe | Home</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
   <header id="headerArea">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="slider_area">
+        <div class="slider_area overlay">
           <div class="menuarea">
             <div class="navbar navbar-default navbar-fixed-top" role="navigation">
               <div class="container">
@@ -71,7 +71,7 @@
               <img src="img/techtower.png" />
               <!--Slider Description example-->
               <div class="slide-desc">
-                <div class="slide_descright">
+                <div class="slide_desccenter">
                   <h1>Support Campus Clean-up Efforts</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
@@ -82,9 +82,9 @@
               </div>
             </li>
             <li>
-              <img src="img/techsquare.jpg" />
+              <img src="img/techsquare.png" />
               <div class="slide-desc">
-                <div class="slide_descright">
+                <div class="slide_desccenter">
                  <h1>Help the IT committee</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
@@ -95,9 +95,9 @@
               </div>
             </li>
             <li>
-              <img src="img/gtatl.jpg" />
+              <img src="img/gtatl.png" />
               <div class="slide-desc">
-               <div class="slide_descright">
+               <div class="slide_desccenter">
                   <h1>Help Buzz support events around campus and around the city</h1>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                 <div class="header_btnarea">
@@ -108,9 +108,9 @@
               </div>
             </li>
             <li>
-              <img src="img/gtcampus.jpg" />
+              <img src="img/gtcampus.png" />
               <div class="slide-desc">
-                <div class="slide_descright">
+                <div class="slide_desccenter">
                   <h1>Help support SGA events year-round</h1>
                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                   <div class="header_btnarea">
