updated license link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; 2016 Akshay Easwaran</p>
-            <span>Theme provided by <a href="http://startbootstrap.com/">StartBootstrap</a>. License available <a href="http://github.com/akeaswaran/akeaswaran.github.io">here</a>.</span>
+            <span>Theme provided by <a href="http://startbootstrap.com/">StartBootstrap</a>. License available <a href="https://github.com/akeaswaran/akeaswaran.github.io/blob/master/grayscale_license.md">here</a>.</span>
         </div>
     </footer>
 
