--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
+                        <a href="http://akeaswaran.github.io/blog">Blog</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#download">Resume</a>
                     </li>
                     <li>
