--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://medium.com/@akseaswaran">Blog</a>
+                        <a class="page-scroll" href="https://medium.com/@akeaswaran">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Resume</a>
@@ -103,7 +103,7 @@
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!--Download Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!--Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
