--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://akeaswaran.github.io/blog">Blog</a>
+                        <a class="page-scroll" href="http://akeaswaran.github.io/blog">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Resume</a>
