--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I'm Akshay Easwaran, and I'm a freshman at the Georgia Institute of Technology.</p>
+                <p>I'm Akshay Easwaran, and I'm a student at the Georgia Institute of Technology.</p>
                 <p>At Georgia Tech, I'm majoring in computer science, a subject I fell in love with long ago. I've been working with and on computers for most of my life and have developed a geniune fascination with how they work and how the software that controls them works.</p>
                 <p>I originally got into programming when my family first bought an iMac and suggested I learn how to create iPhone applications. I followed a few basic tutorials from online and was immediately hooked. I eventually bought a MacBook Pro and started developing apps as a hobby, hoping one day to be good enough at programming to turn my skills into a career.</p>
                 <p>In the summer of 2013, I worked at CloudSherpas, Inc., a cloud-computing and mobile application consulting company based in Atlanta, as an intern in the software engineering department. I helped create an iOS application that interacted with the Salesforce backend service for one of the company's clients.</p>
