--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://akeaswaran.me/blog">Blog</a>
+                        <a class="page-scroll" href="https://medium.com/@akeaswaran">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Resume</a>
