update quote bc it was lame

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Akshay Easwaran</h1>
-                        <p class="intro-text"><i>"Ask not what your country can do for you, ask what you can do for your country."</i><br>John Fitzgerald Kennedy</br></p>
+                        <p class="intro-text"><i>"I want to put a ding in the universe."</i><br>Steve Jobs</br></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
