--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
 ---
+layout: page
+title: Home
 profile: true
 ---
 
-{% include post-list.html %}
-{% include footer.html %}
+<section class="c-archives">
+{% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+
+    {% if forloop.first %}
+        <h2 class="c-archives__year" id="{{ this_year }}-ref">{{this_year}}</h2>
+        <ul class="c-archives__list">
+    {% endif %}
+        <li class="c-archives__item">
+            <h3>
+              <a href="{{ post.url | prepend: site.baseurl }}" style="text-decoration:none;">{{post.title}}</a>
+              <br>
+              <p style="color: #869395; font-size:15px;">{{post.description}}</small>
+            </h3>
+            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+        </li>
+    {% if forloop.last %}
+        </ul>
+    {% else %}
+        {% if this_year != next_year %}
+        </ul>
+        <h2 class="c-archives__year" id="{{ next_year }}-ref">{{next_year}}</h2>
+        <ul class="c-archives__list">
+        {% endif %}
+    {% endif %}
+{% endfor %}
+</section>
