adding some dark mode CSS and updating stories

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ profile: true
               <a href="{{ post.url | prepend: site.baseurl }}" style="text-decoration:none;">{{post.title}}</a>
               {% endif %}
               <br>
-              <p style="color: #869395; font-size:15px;">{{post.description}}</small>
+              <p style="font-size:15px;">{{post.description}}</small>
             </h3>
             <p>{{ post.date | date: "%b %-d, %Y" }}</p>
         </li>
