--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@ profile: true
         <ul class="c-archives__list">
     {% endif %}
         <li class="c-archives__item">
-            <h3>
+            <h3 style="display: block;">
               {% if post.permalink contains 'https:' %}
               <a href="{{ post.permalink }}" style="text-decoration:none;">{{post.title}}</a>
               {% else %}
               <a href="{{ post.url | prepend: site.baseurl }}" style="text-decoration:none;">{{post.title}}</a>
-              {% endif %}
-              <br>
-              <p style="font-size:15px;">{{post.description}}</small>
+              {% endif %}              
             </h3>
-            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+            <p style="display: block;font-size:15px;">{{post.description}}</small>
+            <p style="display: block;">{{ post.date | date: "%b %-d, %Y" }}</p>
         </li>
     {% if forloop.last %}
         </ul>
